--- a/akan.css
+++ b/akan.css
@@ -28,7 +28,7 @@
     background-color: gray;
     display: inline-block;
     box-sizing: content-box;
-    box-shadow: 2px 2px 20px 5px black;
+    box-shadow: 2px 2px 10px aquamarine;
     margin: 10px;
     padding: 10px;
     width:100%;
@@ -39,7 +39,7 @@
 
 .parent{
     margin-top: 10px;
-    margin-bottom: 0;
+    margin-bottom: 5px;
     height: 670px;
     padding: 0;
     background-repeat: no-repeat;
@@ -72,6 +72,12 @@
   }
 
   .jumbotron.parent{
-      background-image: url(trial.jpg);
-      background-size: cover;
+    background: url(trial.jpg )no-repeat center center; 
+    background-size: cover;
+    height: 670px;
+}
+  
+  .radio-button{
+      font-weight: bolder;
+      color: chocolate;
   }
