--- a/akan.css
+++ b/akan.css
@@ -6,7 +6,7 @@
     text-rendering: optimizeLegibility;
     text-decoration-color: darkcyan;
 }
-.submit {
+.submit{
     display:inline-block;
     color: black;
     background-color:rgb(21, 155, 196);
@@ -28,7 +28,7 @@
     background-color: gray;
     display: inline-block;
     box-sizing: content-box;
-    box-shadow: 2px 2px 20px 5px black;
+    box-shadow: 2px 2px 20px 5px aquamarine;
     margin: 10px;
     padding: 10px;
     width:100%;
